<resources>
    <string name="app_name">MazesAndMinotaurs</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="create_character">Create New Character</string>
    <string name="play_character">Play Existing Character</string>
    <string name="delete_character">Delete Character</string>
    <string name="error_delete_character">Must have one character at all times!</string>
    <string name="select_character">Select as Active Character</string>
    <string name="save_portfolio">Save Portfolio</string>
    <string name="save_equipment">Save Equipment Database</string>
    <string name="save_equipment_con">Save Equip</string>
    <string name="resources">Web Resources</string>
    <string name="mm_website"><![CDATA[M&M Website]]></string>
    <string name="player_companion"><![CDATA[M&M Companion pdf]]></string>
    <string name="player_manual"><![CDATA[M&M Player Manual pdf]]></string>
    <string name="lgs_name">Legrand Games Studio</string>
    <string name="mazes_and_minotaurs">Mazes and Minotaurs</string>
    <string name="description_splash_screen">Warriors Attacking a Minotaur</string>
    <string name="description_lgs_logo">LGS Company Logo</string>

    <string name="saves_title">Saves</string>
    <string name="athletic_prowess_long">Athletic Prowess</string>
    <string name="danger_evasion_long">Danger Evasion</string>
    <string name="mystic_fortitude_long">Mystic Fortitude</string>
    <string name="physical_vigor_long">Physical Vigor</string>
    <string name="personal_charisma_long">Personal Charisma</string>
    <string name="athletic_prowess_short">A. P.</string>
    <string name="danger_evasion_short">D. E.</string>
    <string name="mystic_fortitude_short">M. F.</string>
    <string name="physical_vigor_short">P. V.</string>
    <string name="personal_charisma_short">P. C.</string>

    <string name="combat_title">Combat Modifiers</string>
    <string name="melee">Melee</string>
    <string name="missile">Missile</string>
    <string name="attack">Attack</string>
    <string name="initiative">Init</string>
    <string name="equipped_weapon">Equipped Weapon</string>
    <string name="attributes_title">Attributes</string>
    <string name="critical_damage_roll">Critical Damage?</string>
    <string name="defenses_title">Defenses</string>
    <string name="hits_title">Hits</string>
    <string name="edc_view">EDC</string>
    <string name="armor_view">Armor</string>
    <string name="total_hits_view">Total</string>
    <string name="current_hits_view">Current</string>
    <string name="magic_title">Magic</string>
    <string name="talent_bonus_title">Name</string>
    <string name="magic_strength_view">Strength</string>
    <string name="total_power_view">Total</string>
    <string name="current_power_view">Current</string>
    <string name="talent_title">Talent Name</string>
    <string name="power_title">Power</string>

    <!-- Dialog Values -->

    <!-- Character Create Dialog -->
    <string name="class_word">Class: </string>
    <string name="weapon_of_choice">Weapon of Choice: </string>
    <string name="starting_weapon">Starting Weapon: </string>
    <string name="physical_heritage">Physical Heritage: </string>
    <string name="other_heritage">Other Heritage: </string>
    <string name="create_attributes_title">Attributes</string>


    <!-- Attribute Edit Dialog -->
    <string name="confirm_button">Confirm</string>
    <string name="old_attribute_value" formatted="false">%s Old Value\n%2d</string>
    <string name="new_attribute_value">New Value</string>
    <string name="attribute_edit_hint">Enter a number</string>

    <!-- Character Save/Load Fragment -->
    <string name="name_view">Name: %1$s</string>
    <string name="class_view">Class: %1$s</string>
    <string name="level_view">Level: %1$d</string>
    <string name="cancel">Cancel</string>
    <string name="delete_message">Are you sure you want to remove this item?</string>
    <string name="reset_equipment_con">Reset Equip</string>
    <string name="reset_equipment">Reset Equipment Database</string>
    <string name="caution_alert">Are you sure?</string>
    <string name="reset_equip_msg">This will reset the EquipmentDB to default values and delete the saved file!</string>

    <!-- Inventory Screen -->
    <string name="add_equipment">Add Equipment</string>
    <string name="inventory">Inventory</string>
    <string name="inventory_btn">Open Inventory</string>


    <!-- Priority Dialog -->
    <string name="primary_attributes">Primary Attributes</string>
    <string name="other_attributes">Other Attributes</string>
    <string name="first">First:</string>
    <string name="second">Second:</string>
    <string name="third">Third:</string>
    <string name="fourth">Fourth:</string>
    <string name="fifth">Fifth:</string>
    <string name="sixth">Sixth:</string>
    <string name="attribute_priority">Change Priority</string>

    <!-- Character Management Related -->
    <string name="title_activity_character_manage">CharacterManageActivity</string>
    <string name="manage_character">Manage Character</string>
    <string name="manage_characters">Manage Characters</string>

    <!-- Experience Management Related -->
    <string name="actual_level">Actual Level:</string>
    <string name="expected_level">Expected Level:</string>
    <string name="current_experience">Current Experience:</string>
    <string name="add_experience">Add Experience</string>
    <string name="experience_to_add">Experience to add</string>
    <string name="add">Add</string>
    <string name="level_up">Level Up!</string>
    <string name="caution_message">Is this okay?</string>
    <string name="luck_head">Luck:</string>
    <string name="hits_head">Hits:</string>
    <string name="error_big_experience">The number in experience is too big.</string>
    <string name="error_multiple_priorities">You can\'t have multiple of the same attribute selected!</string>
</resources>
