<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_save_portfolio"
        android:orderInCategory="200"
        android:title="@string/save_portfolio"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_save_equipment"
        android:orderInCategory="300"
        android:title="@string/save_equipment"
        android:titleCondensed="@string/save_equipment_con"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_reset_equipment"
        android:orderInCategory="400"
        android:title="@string/reset_equipment"
        android:titleCondensed="@string/reset_equipment_con"
        app:showAsAction="never"/>
</menu>
