<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/create_character"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/create_character"/>
        <item
            android:id="@+id/play_character"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/play_character"/>
        <item
            android:id="@+id/manage_characters"
            android:icon="@drawable/ic_people_black_24dp"
            android:title="@string/manage_characters"/>

    </group>

    <item android:title="@string/resources">
        <menu>
            <item
                android:id="@+id/player_manual"
                android:icon="@drawable/ic_file_download_black_24dp"
                android:title="@string/player_manual"/>
            <item
                android:id="@+id/player_comapanion"
                android:icon="@drawable/ic_file_download_black_24dp"
                android:title="@string/player_companion"/>
            <item
                android:id="@+id/website"
                android:icon="@drawable/ic_web_black_24dp"
                android:title="@string/mm_website"/>
        </menu>
    </item>

</menu>
