<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:text="@string/name_view"/>

    <TextView
        android:id="@+id/manage_name_view"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_row="1"
        android:layout_column="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level_view"/>

    <TextView
        android:id="@+id/manage_level_view"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_row="2"
        android:layout_column="0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/class_view"/>

    <TextView
        android:id="@+id/manage_class_view"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/manage_select_button"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_character"/>

    <Button
        android:id="@+id/manage_delete_button"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_character"/>
</GridLayout>