<?xml version="1.0" encoding="utf-8"?>
<android.widget.GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin">

    <TextView
        android:layout_columnSpan="2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
        android:text="@string/primary_attributes"/>

    <View
        android:layout_row="1"
        android:layout_column="0"
        android:layout_columnSpan="2"
        style="@style/Divider"/>

    <TextView
        android:layout_row="2"
        android:layout_column="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
        android:text="@string/first"/>

    <Spinner
        android:id="@+id/first_attribute_spinner"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_row="3"
        android:layout_column="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
        android:text="@string/second"/>

    <Spinner
        android:id="@+id/second_attribute_spinner"
        android:layout_row="3"
        android:layout_column="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_row="4"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
        android:text="@string/other_attributes"/>

    <View
        android:layout_row="5"
        android:layout_column="0"
        android:layout_columnSpan="2"
        style="@style/Divider"/>

    <TextView
        android:layout_row="6"
        android:layout_column="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
        android:text="@string/third"/>

    <Spinner
        android:id="@+id/third_attribute_spinner"
        android:layout_row="6"
        android:layout_column="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_row="7"
        android:layout_column="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
        android:text="@string/fourth"/>

    <Spinner
        android:id="@+id/fourth_attribute_spinner"
        android:layout_row="7"
        android:layout_column="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_row="8"
        android:layout_column="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
        android:text="@string/fifth"/>

    <Spinner
        android:id="@+id/fifth_attribute_spinner"
        android:layout_row="8"
        android:layout_column="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_row="9"
        android:layout_column="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
        android:text="@string/sixth"/>

    <Spinner
        android:id="@+id/sixth_attribute_spinner"
        android:layout_row="9"
        android:layout_column="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</android.widget.GridLayout>