<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- Displays a message asking the user if this is okay -->
    <TextView
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_width="match_parent"
        android:text="@string/caution_message"
        android:textAlignment="center"/>

    <!-- Displays the addition to luck -->
    <TextView
        android:layout_row="1"
        android:layout_column="0"
        android:text="@string/luck_head"/>

    <TextView
        android:id="@+id/result_luck_text_view"
        android:layout_row="1"
        android:layout_column="1"/>

    <!-- Displays the addition to hits. -->
    <TextView
        android:layout_row="2"
        android:layout_column="0"
        android:text="@string/hits_head"/>

    <TextView
        android:id="@+id/result_hits_text_view"
        android:layout_row="2"
        android:layout_column="1"/>

    <!-- Displays the addition to the score chosen -->
    <TextView
        android:id="@+id/result_score_head_text_view"
        android:layout_row="3"
        android:layout_column="0"/>

    <TextView
        android:id="@+id/result_score_value_text_view"
        android:layout_row="3"
        android:layout_column="1"/>
</GridLayout>