<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content">
    <TextView
        android:id="@+id/attribute_old_base"
        android:layout_column="0"
        android:layout_row="0"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_rowSpan="2"
        android:textAlignment="center"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/attribute_new_base_view"
        android:layout_column="1"
        android:layout_gravity="center"
        android:layout_row="0"
        android:layout_width="wrap_content"
        android:text="@string/new_attribute_value"
        android:textAlignment="center"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/attribute_new_base_edit"
        android:inputType="number"
        android:hint="@string/attribute_edit_hint"
        android:layout_column="1"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_row="1"
        android:layout_width="wrap_content"
        android:textAlignment="center"
        android:textSize="20sp"/>
    <Button
        android:id="@+id/attribute_confirm_button"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_row="2"
        android:layout_width="match_parent"
        android:text="@string/confirm_button"
        android:textSize="20sp"/>
</GridLayout>